<?xml version="1.0"?>
<package format="2">
  <name>cloud_conversions</name>
  <version>0.0.0</version>
  <description>The cloud_conversions package to subscribe to pointcloud and re-publish as pointcloud2 to be used for the 2018 robotics practicals course me41025</description>

  <maintainer email="rmensing@todo.todo">rmensing</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
