<?xml version="1.0"?>
<package format="2">
  <name>detection_3d_to_markers</name>
  <version>0.0.0</version>
  <description>The detection_3d_to_markers package</description>

  <maintainer email="rmensing@todo.todo">rmensing</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>roscpp</depend>
</package>
